# lft2

./: .claudeignore  .env.example  .gitignore  .markdownlintrc  CLAUDE.md  CMakeLists.txt  DEPLOYMENT.md  Doxyfile  IMPLEMENTATION.md  Makefile  README.md  SLOC.md  aapl_data.h  fix_versions.md  generate_price_header.sh  go.mod  go.work  json.h  main.cxx  price_data.h  test.cxx  watchlist.json  wrangler.toml
.github/workflows/: build.yml  deploy-worker.yml  pages.yml  test.yml
cmd/account/: Makefile  go.mod  main.go
cmd/execute/: Makefile  execute_test.go  go.mod  main.go
cmd/fetch/: Makefile  README.md  fetch_test.go  go.mod  http.go  main.go
cmd/filter/: Makefile  filter_test.go  go.mod  main.go
cmd/summary/: go.mod  main.go
cmd/wait-for-bar/: Makefile  go.mod  main.go
code_review/: dt_code_review.md  dt_cpp_review.md  dt_strategy_review.md  json_code_review.md
docs/: STRATEGY_PERFORMANCE.md  daily-summary.html  index.html
fetch/: Makefile  README.md  main.go
internal/alpaca/: alpaca.go  go.mod
prices/: aapl.h  aapl.json  amzn.h  asml.json  baba.json  bac.h  cat.h  cat.json  cop.json  cost.json  crml.h  crml.json  cvx.h  gs.json  hon.h  ief.h  iwm.h  iwm.json  jpm.json  ko.json  lmnd.h  lmnd.json  ms.h  ms.json  msft.json  pep.h  pep.json  pfe.h  pfe.json  qqq.json  rsp.json  slb.h  spy.json  tlt.json  tsm.h  unh.h  vnq.h  vnq.json  wmt.json  xlf.json  (+1 more)
snapshots/: amzn.json  asml.h  baba.h  bac.json  cop.h  cost.h  cvx.json  de.h  de.json  dia.h  dia.json  ge.h  ge.json  googl.h  googl.json  gs.h  hon.json  ief.json  jnj.h  jnj.json  jpm.h  ko.h  lly.h  lly.json  meta.h  meta.json  msft.h  nvda.h  nvda.json  nvo.h  nvo.json  pg.h  pg.json  qqq.h  rsp.h  sap.h  sap.json  slb.json  spy.h  tlt.h  (+9 more)
src/: backtest.cxx  bar.cxx  bar.h  dispatch.cxx  entries.cxx  entry.h  evaluate.cxx  execute.cxx  exit.h  exits.cxx  fetch.cxx  fix.cxx  fix.h  json.h  main.cxx  market.h  nstd.h  params.h  paths.h  profile.cxx  test.cxx  trade.cxx  utils.h
src/backtest/: Makefile  main.cxx
src/filter/: Makefile  main.cxx
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/public/: manifest.json
web/src/: App.svelte  app.css  main.js
web/src/routes/: About.svelte  Analysis.svelte  Dashboard.svelte
workers/: account.js  package.json
